Petite réorganisaiton des fichiers

--- a/templates/devis_site_petit.html
+++ b/templates/devis_site_petit.html
@@ -24,10 +24,7 @@
       Fax:05.56.49.64.52<br/>
       herve.labrouche@notaires.fr<br/></p></div>
 
-      <p>
-        L'hébergement du site ne fait pas partie du présent devis.</p> </br>
-
-    
+    <p>L'hébergement du site ne fait pas partie du présent devis.</p> </br>
       
     <table class="table is-bordered is-striped">
       <tr>
@@ -62,11 +59,9 @@
 
     <div class="box">TVA non applicable - article 293 B du Code Général des Impôts  <div class="payer">  Net à payer 2000 € </div></div> 
 
-
     <div class="pagebreak"> </div>
 
     <p>Date de livraison :</p> <br/>
-
 
     <p>Bon pour accord le : <br/>
       Signature</p>
