--- a/templates/devis_dev_site.jinja
+++ b/templates/devis_dev_site.jinja
@@ -33,18 +33,19 @@
       
     <table class="table is-bordered is-striped">
       <tr>
-        <th>Désignation</th><th>Quantité</th><th>Prix (HT)</th>
+        <th>Désignation</th><th>Quantité</th><th>Prix unitaire (HT)</th><th>Montant (HT)</th>
       </tr>
       {% for line in data_price.grille %}
         <tr>
           <td>{{ line.designation }}</td>
           <td>{{ line.quantité }}</td>
-          <td>{{ line.prix }} {{ "{:.2f}".format(data_price.devise) }}</td>
+          <td>{{ "{:.2f}".format(line.prix_unit) }} {{ data_price.devise }}</td>
+          <td>{{ "{:.2f}".format(line.montant) }} {{ data_price.devise }}</td>
         </tr>
       {% endfor %}
     </table>
 
-    <div class="box"> TVA non applicable - article 293 B du Code Général des Impôts  <div class="payer">  Net à payer {{ "{:.2f}".format(data_price.grille|sum(attribute='prix')) }} {{ data_price.devise }} </div>
+    <div class="box"> TVA non applicable - article 293 B du Code Général des Impôts  <div class="payer">  Net à payer {{ "{:.2f}".format(data_price.grille|sum(attribute='montant')) }} {{ data_price.devise }} </div>
     </div>
     <br/>
     <p>Durée de validité du devis: 90 jours </p><br/>
