--- a/templates/devis.css
+++ b/templates/devis.css
@@ -1,14 +1,23 @@
+@media print {
+
+  @page {
+    margin: 1.75em;
+    size: letter portrait;
+  }
+
+}
+
 .client {
   text-align: right;
 }
 
 .subtitle {
-  font-size: 18px;
-  margin: 1em;
+  font-size: 12px;
+  margin-bottom: 0.1em;
 }
 
 body {
-  font-size: 11px
+  font-size: 10px
 }
 
 .devis {
@@ -36,18 +45,4 @@ table {
 
 #content {
   display: table;
-}
-
-@page {
-  @top-right {
-    content: element(pageHeader);
-  }
-
-  @bottom-right {
-       content: counter(page) "/" counter(pages);
-   }
-}
-
-#pageHeader{
-  position: running(pageHeader);
 }
