--- a/templates/devis_dev_site.jinja
+++ b/templates/devis_dev_site.jinja
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Devis site web</title>
       <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css"/>
-      <link rel="stylesheet" href="devis.css"/>
+      <link rel="stylesheet" href="template/devis.css"/>
   </head>
   <body>
-    <div id="pageHeader">Devis n° {{ num_devis }} - {{ date }}</div>
+    
     <h2 class="subtitle devis"> {{ titre }}</h2>
     <div class="box"><p>{{ nom_emeteur }}<br/>
       {% for line in adresse_emeteur %}
@@ -18,7 +18,8 @@
       E-mail: {{ email_emeteur }}<br/>
       Télépĥone: {{ telephone_emeteur }}<br/>
       SIRET: {{ SIRET_emeteur }}<br/>
-      Code APE: {{ Code_APE_emeteur }}</p></div>
+      Code APE: {{ Code_APE_emeteur }}</p>
+    </div>
 
     <div class="box client"><h2 class="subtitle client">Le client:</h2>
       <p>{{ nom_client }}<br/>
@@ -26,15 +27,17 @@
           {{ line }}<br/>
         {% endfor %}
         Tel: {{ telephone_client }}<br/>
-        Fax: {{ fax_client }}<br/>
-        {{ email_client }}<br/></p>
+        {% if fax_client %}Fax: {{ fax_client }}<br/>{% endif %}
+        E-mail: {{ email_client }}<br/></p>
     </div>
-
       
-    <table class="table is-bordered is-striped">
-      <tr>
-        <th>Désignation</th><th>Quantité</th><th>Prix unitaire (HT)</th><th>Montant (HT)</th>
-      </tr>
+    <table class="table is-bordered is-striped is-fullwidth">
+      <THEAD>
+        <tr>
+          <th>Désignation</th><th>Quantité</th><th>Prix unitaire (HT)</th><th>Montant (HT)</th>
+        </tr>
+      </THEAD>
+      <TBODY>
       {% for line in data_price.grille %}
         <tr>
           <td>{{ line.designation }}</td>
@@ -43,6 +46,7 @@
           <td>{{ "{:.2f}".format(line.montant) }} {{ data_price.devise }}</td>
         </tr>
       {% endfor %}
+      </TBODY>
     </table>
 
     <div class="box"> TVA non applicable - article 293 B du Code Général des Impôts  <div class="payer">  Net à payer {{ "{:.2f}".format(data_price.grille|sum(attribute='montant')) }} {{ data_price.devise }} </div>
