Formulaire plus complet.

--- a/devis_app/templates/devis_app/tabs_new.jinja
+++ b/devis_app/templates/devis_app/tabs_new.jinja
@@ -72,17 +72,17 @@
                 <tr>
                   {# Ligne par défaut à ajouter quand on click sur bouton "nouvell-ligne" #}
                   {# <tr><td><input class="input is-small" type="text" value=""></td><td><input class="input is-small quantity" type="text" value="1"></td><td><input class="input is-small prix-unite" type="text" value="0,00"></td><td></td></tr> #}
-                  <td><input class="input is-small" type="text" value="toto au chateau"></td>
-                  <td><input class="input is-small quantity" type="text" value="2"></td>
-                  <td><input class="input is-small prix-unite" type="text" value="5,90"></td>
+                  <td><textarea class="textarea is-small" cols="40" rows="2" type="text">toto au chateau</textarea></td>
+                  <td><input class="input is-small quantity" type="text" size="8" value="2"></td>
+                  <td><input class="input is-small prix-unite" type="text" size="1" value="5,90"></td>
                   <td class="sous-total"></td>
                 </tr>
                 <tr>
                   {# Test: ligne de test #}
                   {# <tr><td><input class="input is-small" type="text" value=""></td><td><input class="input is-small quantity" type="text" value="1"></td><td><input class="input is-small prix-unite" type="text" value="0,00"></td><td></td></tr> #}
-                  <td><input class="input is-small" type="text" value="Ligne de test"></td>
-                  <td><input class="input is-small quantity" type="text" value="4"></td>
-                  <td><input class="input is-small prix-unite" type="text" value="6,90"></td>
+                  <td><textarea class="textarea is-small" cols="40" rows="2" type="text">Ligne de test</textarea></td>
+                  <td><input class="input is-small quantity" type="text" size="8" value="4"></td>
+                  <td><input class="input is-small prix-unite" type="text" size="1" value="6,90"></td>
                   <td class="sous-total"></td>
                 </tr>
               </tbody>
