--- a/devis_app/templates/devis_app/index.html
+++ b/devis_app/templates/devis_app/index.html
@@ -20,7 +20,12 @@
         {% if dernier_crees %}
         <ul>
           {% for devis_cree in dernier_crees %}
-          <li><a href="{% url 'devis:detail' devis_cree.id %}">{{ devis_cree.titre }}</a> <span>{{devis_cree.date_creation|date:"d M Y"}}</span></li>
+          <li>
+            <span>{{devis_cree.date_creation}}</span> ---
+            <a href="{% url 'devis:detail' devis_cree.id %}">{{ devis_cree.titre }} <i class="fas fa-eye"></i></a> --- 
+            <a href="{% url 'devis:modifier' devis_cree.id %}"><i class="fas fa-edit"></i></a> --- 
+            <a href="{% url 'devis:delete' devis_cree.id %}"><i class="fas fa-trash-alt"></i></a>
+          </li>
           {% endfor %}
         </ul>
         {% else %}
@@ -32,7 +37,12 @@
         {% if dernier_emis %}
         <ul>
           {% for devis_emis in dernier_emis %}
-          <li><a href="{% url 'devis:detail' devis_emis.id %}">{{ devis_emis.titre }}</a> <span>{{ devis_emis.date_emission|date:"d M Y" }}</span></li>
+           <li>
+            <span>{{devis_emis.date_creation}}</span> ---
+            <a href="{% url 'devis:detail' devis_emis.id %}">{{ devis_emis.titre }} <i class="fas fa-eye"></i></a> --- 
+            <a href="{% url 'devis:modifier' devis_emis.id %}"><i class="fas fa-edit"></i></a> --- 
+            <a href="{% url 'devis:delete' devis_emis.id %}"><i class="fas fa-trash-alt"></i></a>
+          </li>
           {% endfor %}
         </ul>
         {% else %}
@@ -40,5 +50,6 @@
         {% endif %}
       </div>
     </div>
+    <script src="https://kit.fontawesome.com/86a11fcf22.js" crossorigin="anonymous"></script>
   </body>
 </html>
