--- a/devis_app/templates/devis_app/modifier.jinja
+++ b/devis_app/templates/devis_app/modifier.jinja
@@ -2,5 +2,5 @@
 
 
 {% block destination_form %}
-  <form class="content" action="{% url 'devis:nouveau' %}" method="post">
+  <form class="content" action="." method="post">
 {% endblock %}
