--- a/devis_app/templates/devis_app/new_object.jinja
+++ b/devis_app/templates/devis_app/new_object.jinja
@@ -16,7 +16,7 @@
         <table>
           {{ view.as_table }}
         </table>
-        <input type="submit" value="Envoyer">
+        <input type="submit" value="Enregistrer">
       </form>
     </div>
   </body>
