--- a/devis_app/templates/devis_app/new_devis.jinja
+++ b/devis_app/templates/devis_app/new_devis.jinja
@@ -1,24 +1,10 @@
-{% load static %}
+{% extends "devis_app/tabs.jinja" %}
 
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Devis site web</title>
-      <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css"/>
-  </head>
-  <body>
-    <h2 class="subtitle devis">Création d'un nouveau devis</h2>
-    <div class="has-text-centered">
-      <form action="" method="post">
-        {% csrf_token %}
-        <table>
-          {{ view.as_table }}
-        </table>
-        <input type="submit" value="Valider">
-      </form>
-    </div>
-  </body>
-</html>
+
+{% block destination_form %}
+  <form class="content" action="{% url 'devis:new_devis' %}" method="post">
+{% endblock %}
+
+{% block emetteur_client %}
+  {{ form_fk.as_table }}
+{% endblock %}
