Changement pour les modification de devis

--- a/devis_app/templates/devis_app/new_devis.jinja
+++ b/devis_app/templates/devis_app/new_devis.jinja
@@ -1,5 +1,8 @@
 {% extends "devis_app/tabs.jinja" %}
 
+{% block titre %}
+  <h2 class="subtitle devis">Création d'un nouveau devis</h2>
+{% endblock %}
 
 {% block destination_form %}
   <form class="content" action="{% url 'devis:new_devis' %}" method="post">
