--- a/devis_app/templates/devis_app/modifier.jinja
+++ b/devis_app/templates/devis_app/modifier.jinja
@@ -1,5 +1,8 @@
 {% extends "devis_app/tabs.jinja" %}
 
+{% block titre %}
+  <h2 class="subtitle devis">Modification devis - id n°{{devis_id}} </h2>
+{% endblock %}
 
 {% block destination_form %}
   <form class="content" action="." method="post">
