--- a/devis_app/templates/devis_app/tabs.jinja
+++ b/devis_app/templates/devis_app/tabs.jinja
@@ -99,6 +99,7 @@
         </table>
         <input class="button" type="submit" value="Enregistrer">
       </form>
+      <a class="button" href="{% url 'devis:index'%}">Retour index</a>
     </div>
     <script src="https://kit.fontawesome.com/86a11fcf22.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
