Generation de pdf sans passer par un pdf temporaire, a debuger

--- a/devis_app/templates/devis_app/index.html
+++ b/devis_app/templates/devis_app/index.html
@@ -30,7 +30,8 @@
             <span>{{devis_cree.date_creation}}</span> ---
             <a href="{% url 'devis:detail' devis_cree.id %}">{{ devis_cree.titre }} <i class="fas fa-eye"></i></a> --- 
             <a href="{% url 'devis:modifier' devis_cree.id %}"><i class="fas fa-edit"></i></a> --- 
-            <a href="{% url 'devis:delete' devis_cree.id %}"><i class="fas fa-trash-alt"></i></a>
+            <a href="{% url 'devis:delete' devis_cree.id %}"><i class="fas fa-trash-alt"></i></a> --- 
+            <a href="{% url 'devis:pdf' devis_cree.id %}"><i class="fas fa-file-pdf"></i></a>
           </li>
           {% endfor %}
         </ul>
