--- a/devis_app/templates/devis_app/pdf.html
+++ b/devis_app/templates/devis_app/pdf.html
@@ -3,20 +3,64 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devis site web</title>
-      <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css"/>
-      <!-- <link rel="stylesheet" href="template/devis.css"/> -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Devis</title>
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css"/>
+    <link rel="stylesheet" href="templates/devis.css"/>
   </head>
   <body>
-    <h2 class="subtitle devis"> Test pdf</h2>
+    <h2 class="subtitle devis"> {{titre}} - le {{date_emission}} - devis n° {{num_emission}}</h2>
+    <div class="box" id="emetteur">
+      <p>
+        {{nom_emetteur}}<br/>
+        {{adresse_emetteur}}<br/>
+        E-mail: {{email_emetteur}}<br/>
+        Tel: {{telephone_emetteur}}<br/>
+        SIRET: {{SIRET}}<br/>
+        Code APE: {{code_APE}}<br/>
+      </p>
+    </div>
+    <div class="box client" id="client">
+      <h2 class="subtitle client">Le client:</h2>
+      <p>
+        {{nom_client}}<br/>
+        {{adresse_client}}<br/>
+        E-mail: {{email_client}}<br/>
+        Tel: {{telephone_client}}<br/>
+        {% if fax_client %}Fax: {{ fax_client }}<br/>{% endif %}<br/>
+      </p>
+    </div>
+    <div id="grille">La grille</div>
+    <table class="table is-bordered is-striped is-fullwidth">
+      <thead>
+        <tr>
+          <th>Désignation</th><th>Quantité</th><th>Prix unitaire (HT)</th><th>Montant (HT)</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for line in lines %}
+        {{line}}
+        <tr>
+          <td>{{ line.designation }}</td>
+          <td>{{ line.quantité }}</td>
+          <td>{{ line.prix_unit }} {{ grille.devise }}</td>
+          <td>{{ line.montant }} {{ grille.devise }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
 
+    <div class='box'>{{mention_total}}: {{grille.total}} {{grille.devise}}</div>
 
+    <div>{{mention}}</div>
     <p>Durée de validité du devis: 90 jours </p><br/>
 
     <p>Le paiement des prestations interviendra par virement sur le compte bancaire dont le RIB a été communiqué au client.</p>
     <br/>
-    
+
     <p>Signature: </p>
+    <div>{{image_signature}}</div>
+
     <p>Faire précéder votre signature de la mention
       « Lu et approuvé, bon pour accord le  »<br/></p>
     
