--- a/devis_app/templates/devis_app/tabs.jinja
+++ b/devis_app/templates/devis_app/tabs.jinja
@@ -51,7 +51,7 @@
         </div>
         <div class="panel" class="columns is-desktop" id="form-grille" style="visibility:visible">
           <div class="column">
-            {{ grille.as_table }}
+            Devise: {{ grille.devise }}
           </div>
           <div class="column">
             <table id="grille">
@@ -70,7 +70,7 @@
                     <td><textarea name="l{{line.numero}}_designation" class="textarea is-small" cols="40" rows="2" type="text">{{ line.designation }}</textarea></td>
                     <td><input name="l{{line.numero}}_quantity" class="input is-small quantity" type="text" size="8" value="{{ line.quantité }}"></td>
                     <td><input name="l{{line.numero}}_prix-unite" class="input is-small prix-unite" type="text" size="1" value="{{ line.prix_unit }}"></td>
-                    <td class="sous-total"></td>
+                    <td><input name="l{{line.numero}}_montant" class="input is-small sous-total" size="2" type="text" value="{{ line.montant }}"></td>
                   </tr>
                   {% endfor %}
                 {% else %}
@@ -80,7 +80,7 @@
                   <td><textarea name="l0_designation" class="textarea is-small" cols="40" rows="2" type="text"></textarea></td>
                   <td><input name="l0_quantity" class="input is-small quantity" type="text" size="8" value="1"></td>
                   <td><input name="l0_prix-unite" class="input is-small prix-unite" type="text" size="1" value="0,00"></td>
-                  <td class="sous-total"></td>
+                  <td><input name="l0_montant" class="input is-small sous-total" size="2" type="text"></td>
                 </tr>
                 {% endif %}
               </tbody>
@@ -92,7 +92,7 @@
               </tfoot>
             </table>
           </div>
-          <div class="subtitle" style="float: right; padding-right: 20px" >Total: <span id="total"></span><span class="devise-holder" style="display:inline"></span></div>
+          <div class="subtitle" style="float: right; padding-right: 20px" >Total: <input name="total" id="total" size="2" value="{{ total }}" type="text"> <span class="devise-holder" style="display:inline"></span></div>
         </div>
         <table class="panel" id="form-info-devis" style="visibility:collapse">
           {{ devis }}
