--- a/devis_app/templates/devis_app/new_devis.jinja
+++ b/devis_app/templates/devis_app/new_devis.jinja
@@ -1,4 +1,4 @@
-{% extends "devis_app/tabs.jinja" %}
+{% extends "devis_app/tabs.html" %}
 
 {% block titre %}
   <h2 class="subtitle devis">Création d'un nouveau devis</h2>
