--- a/devis_app/templates/devis_app/new_object.jinja
+++ b/devis_app/templates/devis_app/new_object.jinja
@@ -1,23 +1,16 @@
+{% extends "base.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devis site web</title>
-      <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css"/>
-  </head>
-  <body>
-    <h2 class="subtitle devis">Création d'un nouveau {{type}}</h2>
-    <div class="has-text-centered">
-      <form action="" method="post">
-        {% csrf_token %}
-        <table>
-          {{ view.as_table }}
-        </table>
-        <input type="submit" value="Enregistrer">
-      </form>
-    </div>
-  </body>
-</html>
+{% block content %}
+<h2 class="subtitle devis">Création d'un nouveau {{type}}</h2>
+<div class="has-text-centered">
+  <form action="" method="post">
+    {% csrf_token %}
+    <table>
+      {{ view.as_table }}
+    </table>
+    <input type="submit" value="Enregistrer">
+  </form>
+</div>
+{% endblock %}
