--- a/devis_app/templates/devis_app/tabs.html
+++ b/devis_app/templates/devis_app/tabs.html
@@ -77,6 +77,7 @@
         <div class="subtitle" style="float: right; padding-right: 20px" >Total: <input name="total" id="total" size="2" value="{{ total }}" type="text"> <span class="devise-holder" style="display:inline"></span></div>
       </div>
       <table class="panel" id="form-info-devis" style="visibility:collapse">
+        {{form_fk}}
         {{devis}}
       </table>
       <input class="button" type="submit" value="Enregistrer">
