Saut de ligne sur l'index.

--- a/devis_app/templates/devis_app/index.html
+++ b/devis_app/templates/devis_app/index.html
@@ -22,8 +22,8 @@
         {% for devis_cree in dernier_crees %}
         <li>
           <span>{{devis_cree.date_creation}}</span> ---
-          <a href="{% url 'devis:detail' devis_cree.id %}">{{ devis_cree.titre }} <i class="fas fa-eye"></i></a> --- 
-          <a href="{% url 'devis:modifier' devis_cree.id %}"><i class="fas fa-edit"></i></a> --- 
+          <a href="{% url 'devis:modifier' devis_cree.id %}">{{ devis_cree.titre }} <i class="fas fa-edit"></i></a> </br> --- 
+          <a href="{% url 'devis:detail' devis_cree.id %}"><i class="fas fa-eye"></i></a> --- 
           <a href="{% url 'devis:delete' devis_cree.id %}"><i class="fas fa-trash-alt"></i></a> --- 
           <a href="{% url 'devis:pdf' devis_cree.id %}"><i class="fas fa-file-pdf"></i></a>
         </li>
@@ -40,9 +40,10 @@
         {% for devis_emis in dernier_emis %}
           <li>
           <span>{{devis_emis.date_creation}}</span> ---
-          <a href="{% url 'devis:detail' devis_emis.id %}">{{ devis_emis.titre }} <i class="fas fa-eye"></i></a> --- 
-          <a href="{% url 'devis:modifier' devis_emis.id %}"><i class="fas fa-edit"></i></a> --- 
-          <a href="{% url 'devis:delete' devis_emis.id %}"><i class="fas fa-trash-alt"></i></a>
+          <a href="{% url 'devis:modifier' devis_emis.id %}">{{ devis_emis.titre }} <i class="fas fa-edit"></i></a> </br> --- 
+          <a href="{% url 'devis:detail' devis_emis.id %}"><i class="fas fa-eye"></i></a> --- 
+          <a href="{% url 'devis:delete' devis_emis.id %}"><i class="fas fa-trash-alt"></i></a> --- 
+          <a href="{% url 'devis:pdf' devis_emis.id %}"><i class="fas fa-file-pdf"></i></a>
         </li>
         {% endfor %}
       </ul>
