--- a/devis_app/static/devis_app/css/print_devis.css
+++ b/devis_app/static/devis_app/css/print_devis.css
@@ -1,23 +1,36 @@
 @media print {
 
-  @page {
-    margin: 1.75em;
-    size: letter portrait;
-  }
-  .box {
-    border: solid;
-    border-width: thin;
-    page-break-inside: avoid;
-  }
+
+
+
+}
+
+@page {
+  margin: 1.75em;
+  size: letter portrait;
+}
+
+.box {
+  border: solid;
+  border-width: thin;
+  page-break-inside: avoid;
+  padding: 0.75rem;
 }
 
 .client {
   text-align: right;
 }
 
+
 .subtitle {
   font-size: 12px;
   margin-bottom: 0.1em;
+}
+
+.client.subtitle {
+  font-size: 12px;
+  margin-bottom: 0.4em;
+  text-align: right;
 }
 
 body {
